--- a/leaderboardinzone.html
+++ b/leaderboardinzone.html
@@ -26,19 +26,19 @@
     <div class="container">
         <h2 class="text-center mb-4">Leaderboard Zone <span id="zoneName"></span></h2>
         <div class="mb-3">
-            <label for="questionFilter" class="form-label">เลือกคำถาม:</label>
+            <label for="questionFilter" class="form-label">เลือกข้อคำถาม:</label>
             <select id="questionFilter" class="form-select">
                 <option value="">ทั้งหมด</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
+                <option value="1)">1</option>
+                <option value="2)">2</option>
+                <option value="3)">3</option>
+                <option value="4)">4</option>
+                <option value="5)">5</option>
+                <option value="6)">6</option>
+                <option value="7)">7</option>
+                <option value="8)">8</option>
+                <option value="9)">9</option>
+                <option value="10)">10</option>
             </select>
         </div>
         <div class="table-responsive">
