--- a/AScrolltotheTreasure.html
+++ b/AScrolltotheTreasure.html
@@ -31,7 +31,7 @@
               <div id="form-content">
                 <!-- ตัวเลือกจะถูกสร้างจาก JavaScript -->
               </div>
-              <button type="button" class="btn btn-primary btn-block" onclick="checkPassword()">Check</button>
+              <button type="button" class="btn btn-primary btn-block" onclick="checkPassword()">ตรวจสอบ</button>
             </form>
           </div>
         </div>
@@ -99,7 +99,7 @@ async function loadGameData() {
 
       const label = document.createElement('label');
       label.className = 'form-label';
-      label.textContent = `Question ${index + 1}`;
+      label.textContent = `คำถามที่ ${index + 1}`;
       formGroup.appendChild(label);
       formGroup.appendChild(select);
 
