--- a/birthdaycard.html
+++ b/birthdaycard.html
@@ -4,113 +4,147 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Happy Birthday เพื่อน!</title>
+  <link href="https://fonts.googleapis.com/css2?family=Mali:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #fce4ec;
+      font-family: 'Mali', cursive;
+      background: linear-gradient(135deg, #f4e4f9 0%, #fce4ec 100%);
       margin: 0;
-      padding: 0;
+      padding: 20px;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      color: #444;
+      min-height: 100vh;
+      color: #333;
       flex-direction: column;
+      overflow-x: hidden;
     }
     .container {
       text-align: center;
-      max-width: 800px;
-      width: 100%;
-      background-color: #fff;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      padding: 30px;
-      position: relative;
+      max-width: 700px;
+      width: 90%;
+      background: #ffffff;
+      border-radius: 20px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+      padding: 25px;
+      animation: fadeIn 1s ease-in-out;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
     h1 {
-      font-size: 2.5rem;
-      color: #d81b60;
-      margin-bottom: 20px;
+      font-size: 2.2rem;
+      color: #ff6f91;
+      margin: 0 0 20px;
+      font-weight: 600;
+      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
     .card {
-      background-color: #f8bbd0;
-      border-radius: 10px;
+      background: #fff0f5;
+      border-radius: 15px;
       padding: 20px;
-      margin: 20px 0;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      max-width: 100%;
-      display: inline-block;
-      text-align: center;
-      transition: all 0.5s ease;
+      margin: 15px 0;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .card:hover {
+      transform: scale(1.02);
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
     }
     .card.special {
-      background-color: #ff80ab;
-      box-shadow: 0 0 20px #ff4081, 0 0 40px #ff4081, 0 0 60px #ff4081;
+      background: linear-gradient(135deg, #ff8aad 0%, #ffccd5 100%);
+      box-shadow: 0 0 15px #ff80ab, 0 0 30px #ff80ab;
     }
     img {
       max-width: 100%;
       height: auto;
-      border-radius: 10px;
-      max-height: 300px;
-      object-fit: contain;
+      border-radius: 12px;
+      max-height: 280px;
+      object-fit: cover;
+      margin-bottom: 15px;
     }
     p {
-      font-size: 1.5rem;
-      color: #000000;
-      margin-top: 15px;
+      font-size: 1.3rem;
+      color: #4a4a4a;
+      line-height: 1.6;
+      margin: 0;
     }
     button {
-      padding: 12px 30px;
-      background-color: #ff4081;
+      padding: 10px 25px;
+      background: #ff80ab;
       color: white;
       border: none;
-      border-radius: 25px;
-      font-size: 1.2rem;
+      border-radius: 50px;
+      font-size: 1.1rem;
+      font-family: 'Mali', cursive;
       cursor: pointer;
-      transition: background-color 0.3s ease;
+      margin: 10px;
+      transition: all 0.3s ease;
     }
     button:hover {
-      background-color: #f50057;
+      background: #ff5c8d;
+      transform: translateY(-2px);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
     }
     .button-container {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
       margin-top: 20px;
     }
     .footer {
-      margin-top: 30px;
-      font-size: 1rem;
-      color: #777;
+      margin-top: 25px;
+      font-size: 0.9rem;
+      color: #888;
+      opacity: 0.7;
     }
 
     /* Responsive Design */
     @media (max-width: 768px) {
       h1 {
-        font-size: 2rem;
+        font-size: 1.8rem;
       }
       .container {
         padding: 20px;
+        width: 95%;
       }
-      button {
-        font-size: 1rem;
-        padding: 10px 25px;
+      img {
+        max-height: 220px;
       }
-    }
-
-    @media (max-width: 480px) {
-      h1 {
-        font-size: 1.5rem;
-      }
-      .card {
-        padding: 15px;
+      p {
+        font-size: 1.1rem;
       }
       button {
         font-size: 1rem;
         padding: 8px 20px;
       }
     }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 1.4rem;
+      }
+      .container {
+        padding: 15px;
+      }
+      img {
+        max-height: 180px;
+      }
+      p {
+        font-size: 1rem;
+      }
+      button {
+        font-size: 0.9rem;
+        padding: 8px 15px;
+      }
+      .button-container {
+        gap: 10px;
+      }
+    }
   </style>
 </head>
 <body>
-
   <div class="container">
     <h1 id="birthdayTitle">Happy Birthday, เพื่อน!</h1>
     <div id="content" class="card"></div>
@@ -122,13 +156,11 @@
   </div>
 
   <script>
-    // ฟังก์ชันดึงค่าพารามิเตอร์จาก URL
     function getQueryParam(param) {
       const urlParams = new URLSearchParams(window.location.search);
       return urlParams.get(param);
     }
 
-    // ดึงชื่อชีทจากพารามิเตอร์ URL
     const sheetName = getQueryParam('forperson');
     if (!sheetName) {
       document.body.innerHTML = `
@@ -145,15 +177,11 @@
     let currentIndex = 0;
     let data = [];
 
-    // Fetch data from Google Sheets
     fetch(apiUrl)
       .then(response => response.json())
       .then(json => {
-        data = json.values.slice(1); // Skip the first row (headers)
-
-        // Set the birthday title from cell F2
-        document.getElementById('birthdayTitle').textContent = json.values[1][5]; // F2 is in row 2, column 6
-
+        data = json.values.slice(1);
+        document.getElementById('birthdayTitle').textContent = json.values[1][5];
         displayContent(currentIndex);
       })
       .catch(error => {
@@ -166,7 +194,6 @@
         `;
       });
 
-    // Display content based on current index
     function displayContent(index) {
       const contentDiv = document.getElementById('content');
       const prevButton = document.getElementById('prevButton');
@@ -176,45 +203,38 @@
         const imageUrl = data[index][0];
         const message = data[index][1];
 
-        // Update content
-        contentDiv.classList.remove('special'); // Remove special class for normal pages
+        contentDiv.classList.remove('special');
         contentDiv.innerHTML = `
           <img src="${imageUrl}" alt="Image">
           <p>${message}</p>
         `;
 
-        // Update button visibility
         prevButton.style.display = index > 0 ? 'inline-block' : 'none';
         nextButton.style.display = 'inline-block';
       } else {
-        // Special last page
         const imageUrl = data[data.length - 1][0];
         const message = data[data.length - 1][1];
 
-        contentDiv.classList.add('special'); // Add special class for glowing effect
+        contentDiv.classList.add('special');
         contentDiv.innerHTML = `
           <img src="${imageUrl}" alt="Image">
           <p>${message}</p>
         `;
 
-        // Only show previous button
         prevButton.style.display = 'inline-block';
         nextButton.style.display = 'none';
       }
     }
 
-    // Move to the next page
     document.getElementById('nextButton').addEventListener('click', () => {
       currentIndex++;
       displayContent(currentIndex);
     });
 
-    // Go back to the previous page
     document.getElementById('prevButton').addEventListener('click', () => {
       currentIndex--;
       displayContent(currentIndex);
     });
   </script>
-
 </body>
 </html>
