--- a/mcofedukeyword.html
+++ b/mcofedukeyword.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100;300;400;700&display=swap" rel="stylesheet">
-    <title>keyword mc of edu gen1</title>
+    <title>สุ่มคำถามนางงาม</title>
     <style>
         body {
             margin: 0;
@@ -35,7 +35,7 @@
         .keyword-box {
             display: flex;
             justify-content: center;
-            gap: 70px;
+            gap: 72px;
             margin: 20px 0;
             position: absolute;
             left: 50%;
@@ -56,7 +56,7 @@
             margin: 20px 0;
             z-index: 1;
             position: absolute;
-            left: 90%;
+            left: 95%;
             top: 4%;
             transform: translateX(-50%);
         }
@@ -65,7 +65,7 @@
             gap: 10px;
             z-index: 1;
             position: absolute;
-            left: 90%;
+            left: 95%;
             top: 20%;
             transform: translateX(-50%);
         }
