--- a/mcofedukeyword.html
+++ b/mcofedukeyword.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100;300;400;700&display=swap" rel="stylesheet">
-    <title>keyword mc of edu</title>
+    <title>สุ่มคำถามนางงาม</title>
     <style>
         body {
             margin: 0;
@@ -125,6 +125,7 @@
         <button id="toggleTimer">เริ่มเวลา</button>
         <button id="finishButton">เสร็จสิ้น</button>
     </div>
+    <button id="fullScreenBtn" class="full-screen-btn">เต็มจอ</button>
 
     <script>
         const apiUrl = 'https://sheets.googleapis.com/v4/spreadsheets/1tzccNv84EwgoiW3KR99_giJqJyhi8Yq-_HXo_9MnZgY/values/keywordmc?alt=json&key=AIzaSyAD_aNO81AEscbG0Ij-krW7neHe6FebBDE';
