--- a/mathequam1.html
+++ b/mathequam1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>💖 เกมจับคู่สมการสุดคิ้วท์ 💖</title>
+    <title>💖ภารกิจพิชิตสมการ💖</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;700&family=Mali:wght@400;600&display=swap" rel="stylesheet">
@@ -168,7 +168,7 @@
 <body>
 
     <div class="game-container">
-        <h1>💖จับคู่สมการ💖</h1>
+        <h1>💖ภารกิจพิชิตสมการ💖</h1>
         <div class="game-main-area">
             <div id="equations-list"></div>
             <div id="answer-options"></div>
